Refactor IdxStockCommand to enhance readability and maintainability
- Change instance variables for `Random`, `stockColor`, `priceHistory`, and `timeHistory` to final.
- Remove unnecessary placeholder data initialization and detailed info methods.
- Simplify market open check logic.
- Extract currency display formatting into a separate method to reduce duplication.
- Clean up fetching and displaying data logic for clarity.